# Portfolio

./: README.md
Scientific Computing/Eigensolver/: CMakeLists.txt  README.md
Scientific Computing/Eigensolver/docs/html/: annotated_dup.js  classInput-members.html  classInput.html  classInputTest.js  classInversePowerMethodSolver__coll__graph.map  classOutput-members.html  classOutput__coll__graph.map  classPowerMethodSolver.html  classPowerMethodSolver__coll__graph.md5  classQRMethodSolver-members.html  classQRMethodSolver__coll__graph.md5  classSolver-members.html  classSolver.html  classSolverTest-members.html  dir_13e138d54eb8818da29c3992edef070a_dep.md5  graph_legend.html  hierarchy.html  index.html  inherit_graph_1.map  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_4.md5  inherit_graph_6.md5  inherits.html  input_8cpp__incl.md5  input_8hpp_source.html  main_8cpp.html  main_8cpp.js  main_8cpp__incl.md5  menudata.js  navtreedata.js  output_8hpp.js  output__imp_8hpp.js  output__imp_8hpp__dep__incl.md5  output__imp_8hpp__incl.map  output__imp_8hpp__incl.md5  pages.html  solver_8hpp.html  solver_8hpp__dep__incl.md5  (+8 more)
Scientific Computing/Eigensolver/docs/latex/: annotated.tex  classInputTest.tex  classInputTest__coll__graph.md5  classInversePowerMethodSolver.tex  classPowerMethodSolver__coll__graph.md5  classQRMethodSolver__coll__graph.md5  classSolverTest.tex  dir_13e138d54eb8818da29c3992edef070a.tex  main_8cpp.tex  (+11 more)
Scientific Computing/Eigensolver/src/: output_imp.hpp  solver_imp.hpp
Scientific Computing/Eigensolver/test/: test.cpp
(+370 files in other folders)
